# ApplicationInsights-Python

./: .flake8  .gitignore  .isort.cfg  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DESCRIPTION.rst  MANIFEST.in  Microsoft.ApplicationInsights.pyproj  Microsoft.ApplicationInsights.sln  README-deprecated.md  README.md  README.rst  lint-requirements.txt  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
Schema/: generateSchema.ps1
Schema/PublicSchema/: PageViewData.bond
applicationinsights/: TelemetryClient.py  __init__.py
applicationinsights/channel/: AsynchronousMultiQueue.py  AsynchronousQueue.py  AsynchronousSender.py  (+11 more)
azure-monitor-events-extension/: CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  setup.py
azure-monitor-opentelemetry/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
azure-monitor-opentelemetry-autoinstrumentation/: CHANGELOG.md  setup.py
azure-monitor-opentelemetry-distro/: README.md  setup.cfg  setup.py
azure-monitor-opentelemetry-distro/azure/monitor/opentelemetry/distro/: __init__.py  _configurator.py  _constants.py  _diagnostic_logging.py  _distro.py  _status_logger.py  _types.py  _version.py  configurator.py  distro.py
azure-monitor-opentelemetry-distro/azure/monitor/opentelemetry/distro/_diagnostics/: _diagnostic_logging.py  _status_logger.py
azure-monitor-opentelemetry-distro/azure/monitor/opentelemetry/distro/util/: __init__.py
azure-monitor-opentelemetry-distro/samples/: simple.py
azure-monitor-opentelemetry-distro/samples/logging/: correlated_logs.py  custom_properties.py  exception_logs.py  logs_with_traces.py  simple.py
azure-monitor-opentelemetry-distro/samples/metrics/: attributes.py  instruments.py  views.py
azure-monitor-opentelemetry-distro/samples/tracing/: client.py  db_psycopg2.py  server_flask.py  simple.py
azure-monitor-opentelemetry-distro/samples/tracing/django/sample/: manage.py
azure-monitor-opentelemetry-distro/samples/tracing/django/sample/example/: urls.py  views.py
azure-monitor-opentelemetry-distro/src/azure/monitor/opentelemetry/distro/: version.py
azure-monitor-opentelemetry-distro/tests/: test_constants.py  test_diagnostic_logging.py  test_distro.py  test_flask.py  test_psycopg2.py  test_requests.py  test_status_logger.py
azure-monitor-opentelemetry-distro/tests/configuration/: test_configure.py  test_util.py
azure-monitor-opentelemetry-distro/tests/diagnostics/: test_diagnostic_logging.py  test_status_logger.py
azure-monitor-opentelemetry-distro/tests/instrumentation/: test_flask.py  test_psycopg2.py  test_requests.py
django_tests/: all_tests.sh  run_all_tests.sh  run_test.sh  template.html  tests.py  urls.py  views.py
doc/: Makefile  applicationinsights.channel.contracts.rst  applicationinsights.channel.rst  applicationinsights.django.rst  applicationinsights.exceptions.rst  applicationinsights.logging.rst  applicationinsights.requests.rst  applicationinsights.rst  conf.py  index.rst  make.bat
scripts/: build.sh
tests/: test_exporter.py  tests.py
(+236 files in other folders)
