# -------------------------------------------------------------------------
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See License in the project root for
# license information.
# --------------------------------------------------------------------------
[metadata]
name = azure-monitor-opentelemetry-distro
description = Azure Monitor Distro for OpenTelemetry Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft Corporation
url = https://github.com/microsoft/ApplicationInsights-Python
platforms = any
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Typing :: Typed

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    azure-monitor-opentelemetry-exporter == 1.0.0b6

[options.packages.find]
where = src
